fixed header height on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,9 @@ header {
   align-items: center;
   background: #607D8B;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4); }
+  @media (max-width: 540px) {
+    header {
+      height: 75px; } }
   header h2 {
     font-family: 'Dancing Script', cursive;
     color: #fff;
